--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,36 @@
-# Permalinks
+# Welcome to Jekyll!
 #
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
-paginate:            5
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Casual Inference
+email: tyler@tylerkontra.com
+description: A collection of thoughts arising from an oppresively  analytical mindset.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://blog.tylerkontra.com" # the base hostname & protocol for your site
+portfolio: "http://tylerkontra.com"
 
-# About/contact
-author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+#twitter_username: 
+github_username: tylerkontra
 
+# Build settings
+markdown: kramdown
+theme: minima
+
+paginate: 5
+gems: [jekyll-paginate]
 # Custom vars
-version:             1.0.0
+version:             0.1.0
+
+
+
